update after reading with Jason alone - section on the eight enjoyments almost done

--- a/bindu.bib
+++ b/bindu.bib
@@ -22,6 +22,15 @@
  keywords={seclit}, 
 }
 
+@book{ratirahasya,
+  title = {Ratirahasya},
+  author = {Kokkoka},
+  year = {11th or 12th century},
+  publisher = {Laṃvapurīya - "mumbai saṃskṛta" mudraṇayantrālaye mudritaṃ},
+  address = {Mumbai},
+  keywords={printed},
+}
+
 @inproceedings{balcerowicz2011dharmakirti,
   title={Dharmakīrti’s Criticism of the Jaina Doctrine of Multiplexity of Reality (\textit{anekāntavāda})},
   author={Balcerowicz, Piotr},
