--- a/bindu.tex
+++ b/bindu.tex
@@ -605,7 +605,7 @@ kvaci\skp{d-ra}\app{\lem[wit={ceteri},alt={ratnamayī}]{\skm{d-ra}tnamayī}
   \begin{translation}
     \begin{tlate}[p22_02]
       \noindent
-Just as the single soil at some places appears soft, at some places beautiful, at some places is endowed with fragrance, at some places withput fragrance, at some places [it contains] gold, at some places silver, at some places [it contains] gems,\footnote{The description of the soil at this point is not clear. The colored soil mentioned next suggests a soil in golden color, silver color and in the color of precious stones. However, the parallel formulations in the \textit{Yogasvarodaya} (i.e \textit{svarṇarūpā dhāturūpā citrā ratnamayī parā |}) rather suggest soil containing the metals or precious stones in question.} at some places appears white, at some places black, at some places red, at some places yellow, at some places appears in variegated colour, at some places like various fruit, 
+Just as the single soil at some places appears soft, at some places beautiful, at some places is endowed with fragrance, at some places withput fragrance, at some places [it contains] gold, at some places silver, at some places [it contains] gems,\footnote{The description of the soil at this point is not clear. The colored soil mentioned next suggests a soil in golden color, silver color and in the color of precious stones. However, the parallel formulations in the \textit{Yogasvarodaya} (i.e \textit{svarṇarūpā dhāturūpā citrā ratnamayī parā} |) rather suggest soil containing the metals or precious stones in question.} at some places appears white, at some places black, at some places red, at some places yellow, at some places appears in variegated colour, at some places like various fruit, 
 at some places like flowers, at some places like a liquid, [and that] only because of its nature. \\\\
 In the same way, the self also takes the form of a human, a bird, a deer, an elephant, a Vidyādhara, a Gandharva, a centaur, a great scholar or a great fool, 
 a sick or healthy person, an angry or peaceful person, by virtue of its inherent nature. \\\\
@@ -827,11 +827,12 @@ Through Jñānayoga [the self] without the change of form is known.
 \app{\lem[wit={ceteri}]{sunitaṃbinī}
 \rdg[wit={P}]{sunitāṃbinīḥ}
 \rdg[wit={U1}]{sunītavinīta}}/}\\
-\tl{\app{\lem[wit={E},alt={susthānañ ca}]{susthāna\skp{ñ-cā}}
-\rdg[wit={P,L,N2}]{susthānāś}
+\tl{\app{\lem[type=emendation, resp=egoscr]{susthātā}
 \rdg[wit={D,N1,U1}]{susthātāś}
-\rdg[wit={U2}]{sudehaṃ}
-}\app{\lem[wit={L},alt={°ānnapānāny}]{\skm{ñ-cā}nnapānāny}
+\rdg[wit={P,L,N2}]{susthānāś}
+\rdg[wit={E},alt={susthānañ ca}]{susthānañ cā}
+\rdg[wit={U2}]{sudehaṃ}}
+\app{\lem[wit={L},alt={cānnapānāny}]{cānnapānāny}
 \rdg[wit={B}]{vānnapānāny}
 \rdg[wit={E}]{cānnapānāni}
 \rdg[wit={P}]{cānpanānp°}
@@ -839,13 +840,14 @@ Through Jñānayoga [the self] without the change of form is known.
 \rdg[wit={D,N2}]{cānmanasyā°}
 \rdg[wit={U1}]{cānnapānaḥ syād°}
 \rdg[wit={U2}]{sukhasaṃtānaṃ}}
-\app{\lem[wit={E,P},alt={aṣṭau bhogāś ca dhīmatām}]{aṣṭau bhogāś-ca dhīmatām}
-\rdg[wit={B,L}]{aṣṭau bhogāś cā sudhīmatām}
-\rdg[wit={N1}]{ṣṭau bhogāḥ sudhipaṇa°}
-\rdg[wit={D}]{ṣṭau bhogāḥ sudhiṣaṇa°}
-\rdg[wit={U1}]{aṣṭau bhogāḥ sudhiṣaṇāṃ}
-\rdg[wit={N2}]{aṣṭau bhogāḥ}
-\rdg[wit={U2}]{abhayādicāṣṭakaṃ}}\dd{} \begin{otherlanguage}{english}\uproman{22}.1\end{otherlanguage} \dd{}}
+\app{\lem[type=emendation, resp=egoscr]{aṣṭau bhogāḥ sudhiṣaṇam}
+  \rdg[wit={D}]{ṣṭau bhogāḥ sudhiṣaṇa°}
+  \rdg[wit={U1}]{aṣṭau bhogāḥ sudhiṣaṇāṃ}
+  \rdg[wit={B,L}]{aṣṭau bhogāś cā sudhīmatām}
+  \rdg[wit={N1}]{ṣṭau bhogāḥ sudhipaṇa°}
+  \rdg[wit={E,P},alt={aṣṭau bhogāś ca dhīmatām}]{aṣṭau bhogāś ca dhīmatām}
+  \rdg[wit={N2}]{aṣṭau bhogāḥ}
+  \rdg[wit={U2}]{abhayādicāṣṭakaṃ}}\dd{} \begin{otherlanguage}{english}\uproman{22}.1\end{otherlanguage} \dd{}}
 \end{tlg}
   \end{edition}
   \begin{translation}
@@ -866,22 +868,15 @@ Through Jñānayoga [the self] without the change of form is known.
       What are the eight enjoyments?\footnote{I was not able to allocate the source of the \textit{aṣṭau bhogāḥ} yet.
        In the \textit{Mānasollāsa} of King Someśvara, one finds the mention of twenty royal \textit{upabhoga}s, which, however,
       includes all of the eight pleasures in greater detail \parencite[5]{manasollasa}. 
-      This alludes to the possibility of an exceptionally wealthy lifestyle for Rāmacandra's audience.}
+      This alludes to the possibility of an exceptionally wealthy lifestyle for Rāmacandra's audience mentioned in section \uproman{1}.}
       \end{tlate}
     \begin{tlate}[22_1]
-      \paragraph{\uproman{22}.1} A good perfume, fine clothing, a good bed, a beautiful woman, a good dwelling (\textit{susthāna})
-       food and drink.\footnote{Surprisingly, the verse only gives seven enjoyments. 
-       The horse is lacking compared to the list given a little later.} 
-       Those are the eight enjoyments of the wise.\footnote{Right after the list presented on the next page, 
-       Rāmacandra teaches that the eight enjoyments cause suffering and attachment. 
-       However, the end of the verse with \textit{aṣṭau bhogāś ca dhīmatām}, ``the eight enjoyments of the wise/clever person''
-        suggests a rather positive connotation.}
+      \paragraph{\uproman{22}.1} A good perfume, fine clothing, a good bed, a beautiful woman and a good charioteer,\footnote{Several plausible readings exist for the fifth element among the eight pleasures. The reading \textit{sudeham}, as an outsider, is probably a later correction. Moreover, although \textit{susthānam} (`a good site') would be a simple and plausible solution, the stemma suggests the reading \textit{susthātā} (`a good charioteer'). This word has only survived in an incorrect grammatical form and needs to be corrected. This choice is supported, among other things, by the fact that a total of eight pleasures must be mentioned in this verse, which is only possible if the last word of the fourth \textit{pāda} is read as \textit{sudhiṣaṇam} (`a good dwelling-place'), which makes the reading \textit{susthānam} redundant. Additionally, Rāmacandra himself introduces a horse as one of the eight enjoyments in the following paragraph of the \textit{Yogatattvabindu}. Thus, \textit{susthātā} as an element related to vehicles is plausible.} food, drink, [and a] good dwelling-place. Those are the eight enjoyments.
       \flushpage
         \end{tlate}
   \end{translation}
 \end{alignment}
 \pagebreak %after pp. 49-50
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%PAGEBREAK%%%%%%%PAGEBREAK%%%%%%%%%
@@ -917,14 +912,14 @@ Through Jñānayoga [the self] without the change of form is known.
   \ekddiv{type=ed}
     \begin{prose}[p22_04]
       %------------------------------
-      %padṛsūtramayāni vasrāṇi//  \E
+      %paṭṭasūtramayāni vasrāṇi//  \E
       %padasūtramayāni vastrāṇi?? \P %%%7643.jpg
       %paṭasūtrāmayāni vasrāṇi//  \B
       %paṭasūtrāmayāni vastrāṇi// \L
-      %padṛsūtrayāni   vasrāṇi    \N1
-      %padṛsūtrayāni   vasrāṇi    \D
-      %padṛsūtrayāni   vasrāṇi    \N2
-      %padṛsūtramayāni vasrāṇi    \U1
+      %paṭṭasūtrayāni   vasrāṇi    \N1
+      %paṭṭasūtrayāni   vasrāṇi    \D
+      %paṭṭasūtrayāni   vasrāṇi    \N2
+      %padasūtramayāni vasrāṇi    \U1
       %paṭasūtramayāni vasrāṇi    \U2
       %------------------------------
       %Clothes made from silk,...
@@ -942,13 +937,12 @@ Through Jñānayoga [the self] without the change of form is known.
       %,a site of the palace in which there are mainsions endowned with five or seven rooms. A very large and soft bed with an excellent blanket. 
       %-------------------------------------------
             \noindent
-            \note[type=source, labelb=147a, labele=_147e, nosep]{cf. YSv (PT p. 837): ātmāvivekam āgamya calac cittaṃ mahākulam | viṣayāndhatamo dṛṣṭvā no vetti paramātmanaḥ | amāyātmā tattvātītaḥ satsandhānavivarjitaḥ | sukhī duḥkhī janma mṛtyuṃ yāti satyaṃ punaḥ punaḥ | vairāgyādidhanaṃ tyaktvā viṣavad duḥkhakṛddhiyaḥ | koṭisūryasamātmeti jñānayogād vimucyate |}
-      \app{\lem[type=emendation, resp=egoscr,alt={paṭṭa°}]{paṭṭa}
+            \note[type=source, labelb=147a, labele=_147e, nosep]{cf. YSv (PT p. 837): ātmāvivekam āgamya calac cittaṃ mahākulam | viṣayāndhatamo dṛṣṭvā no vetti paramātmanaḥ | amāyātmā tattvātītaḥ satsandhānavivarjitaḥ | sukhī duḥkhī janmamṛtyuṃ yāti satyaṃ punaḥ punaḥ | vairāgyādidhanaṃ tyaktvā viṣavad duḥkhakṛddhiyaḥ | koṭisūryasamātmeti jñānayogād vimucyate |}
+      \app{\lem[wit={D,E,N1,N2}, alt={paṭṭa°}]{paṭṭa}
         \rdg[wit={B,L,U2}]{paṭa°}
-        \rdg[wit={X,E}]{padṛ°}
-        \rdg[wit={P}]{pada°}
-      }\app{\lem[wit={ceteri},alt={sūtra°}]{sūtra}
-        \rdg[wit={B,L}]{sūtrā}
+        \rdg[wit={P,U1}]{pada°}
+      }\app{\lem[wit={ceteri},alt={°sūtra°}]{sūtra}
+        \rdg[wit={B,L}]{°sūtrā°}
       }\app{\lem[wit={ceteri}, alt={°mayāni}]{mayāni}
         \rdg[wit={D,N1,N2}]{°yāni}}
       \app{\lem[wit={P,L}]{vastrāṇi}
@@ -965,25 +959,24 @@ Through Jñānayoga [the self] without the change of form is known.
         \rdg[wit={U1}]{dālikā}
       }\app{\lem[wit={ceteri}]{yuktāni}
         \rdg[wit={U2}]{saudhāni}}
-      harmyāṇi
-      \app{\lem[wit={L,B}]{teṣu vāstu}
-        \rdg[wit={E}]{teṣu vāsaḥ}
-        \rdg[wit={P}]{teṣu cāsaḥ}
-        \rdg[wit={U2}]{vāsāya kecit}
-        \rdg[wit={ceteri}]{\om}} 2\dd{}
+\app{\lem[wit={X}]{harmyāṇi}
+        \rdg[wit={L,B}]{harmyāṇi teṣu vāstu}
+        \rdg[wit={E}]{harmyāṇi teṣu vāsaḥ}
+        \rdg[wit={P}]{harmyāṇi teṣu cāsaḥ}
+        \rdg[wit={U2}]{harmyāṇi vāsāya kecit}} 2\dd{}
       \app{\lem[wit={ceteri},alt={ativipulā°}]{ativipulā}
         \rdg[wit={D,N1}]{ativapulā°}
         \rdg[wit={U1}]{ativipulāṃ}
-        \rdg[wit={U2}]{aṣṭau bhogān āha ||}
-      }\app{\lem[type=emendation, resp=egoscr,alt={mṛdūttara}]{mṛdūttara}
+        \rdg[wit={U2}]{aṣṭau bhogān āha ||}}
+      \app{\lem[type=emendation, resp=egoscr,alt={mṛdūttara°}]{mṛdūttara}
         \rdg[wit={B,E,L,P}]{mṛdutara°}
         \rdg[wit={X}]{mṛdu | uttara°}
         \rdg[wit={U2}]{sugrahaṃ ||}
       }\app{\lem[wit={P},alt={°chadavatī°}]{chadavatī}
         \rdg[wit={D,N1,N2}]{°chandavatī°}
         \rdg[wit={U1}]{°chadavati°}
-        \rdg[wit={U2}]{suvastraṃ ||}
-      }\app{\lem[wit={ceteri}, alt={°śayyā}]{śayyā}
+        \rdg[wit={U2}]{suvastraṃ ||}}
+      \app{\lem[wit={ceteri}, alt={°śayyā}]{śayyā}
         \rdg[wit={U2}]{suśayā sustrī}} 3\dd{}
       %------------------------------
       %padminī tārūṇyavatī  manoharā guṇavatī  tatropaviṣṭā kāṃtā/      \E
@@ -1005,16 +998,16 @@ Through Jñānayoga [the self] without the change of form is known.
         \rdg[wit={ceteri}]{tārūṇyavatī}
         \rdg[wit={N2}]{tārūrāyavatī}
         \rdg[wit={U2}]{\om}}
-      \app{\lem[wit={ceteri}]{manoharā guṇavatī}
-        \rdg[wit={U2}]{\om}}
-      \app{\lem[wit={ceteri}]{tatropavistā}
-         \rdg[wit={P}]{tatopavistā}
+   manoharā guṇavatī
+\app{\lem[wit={E}]{tatropaviṣṭā}
+        \rdg[wit={P}]{tatopaviṣṭā} 
+        \rdg[wit={X}]{tatropavistā}
         \rdg[wit={B}]{tatrāpavistā}
         \rdg[wit={U2}]{\om}}
       \app{\lem[wit={B,E,L,P}]{kāntā}
         \rdg[wit={ceteri}]{\om}} 4\dd{}
       %------------------------------
-      %sādhu āśanam/      atimūlyañ ca/         manoramam annaṃ।       tathā vidhaṃ pānam/   \E
+      %sādhu āśanam/      atimūlyañ ca/         manoramam annaṃ/       tathā vidhaṃ pānam/   \E
       %sādhu āsanaṃ 5     atimūlo 'śvaḥ 6       manoramam annaṃ    7   tathā vidhaṃ pānaṃ 8  \P
       %sādhu āsanaṃ 5     atimūlyo asvaṃ//6     manoramyam attaṃ //7   tathā vidhapānaṃ//8   \B
       %sādhu āsanaṃ// 5// atimūlyo aśvaṃ//6//   manoramyam annaṃ //7// tathā vidhapānaṃ//8// \L
@@ -1030,11 +1023,11 @@ Through Jñānayoga [the self] without the change of form is known.
         \rdg[wit={E}]{sādhu āśanam}
         \rdg[wit={B,L,P,U2}]{sādhu āsanaṃ}
         \rdg[wit={D,N1,N2}]{sādhyāsanaṃ}} 5\dd{}
-      \app{\lem[type=emendation, resp=egoscr]{atimūlyo'śvaḥ}
+      \app{\lem[type=emendation, resp=egoscr, alt={atimūlyo 'śvaś ca}]{atimūlyo'śvaś ca}
+        \rdg[wit={X}]{amūlyo svaś ca}   
         \rdg[wit={E}]{atimūlyañ ca}
         \rdg[wit={P}]{atimūlo 'śvaḥ}
         \rdg[wit={B,L}]{atimūlyo asvaṃ}
-        \rdg[wit={X}]{amūlyo svaś ca}
         \rdg[wit={U2}]{suśvaḥ}} 6\dd{}
       \app{\lem[wit={ceteri},alt={manoramam annaṃ}]{manoramam-annaṃ}
         \rdg[wit={B}]{manoramyam attaṃ}
@@ -1066,10 +1059,10 @@ Through Jñānayoga [the self] without the change of form is known.
       \app{\lem[wit={ceteri}]{bhogāḥ}
         \rdg[wit={N1,N2}]{bhogā}
         \rdg[wit={U1}]{ghogā}}
-      \app{\lem[wit={E,U2}]{kathitāḥ}
-        \rdg[wit={P}]{kathitā}
+      \app{\lem[wit={D}]{kathyante}
         \rdg[wit={N1,N2,U1}]{kathyate}
-        \rdg[wit={D}]{kathyaṃte}
+        \rdg[wit={E,U2}]{kathitāḥ}
+        \rdg[wit={P}]{kathitā}
         \rdg[wit={B,L}]{\om}}/
       \app{\lem[wit={D,N2,U1}]{ete}
         \rdg[wit={E,P,N1}]{eke}
@@ -1183,7 +1176,7 @@ Through Jñānayoga [the self] without the change of form is known.
         \rdg[wit={N2}]{śaityāś}
         \rdg[wit={E,P}]{śītaṃ}
         \rdg[wit={B,L}]{śītaḥ}}\dd{}
-      \app{\lem[wit={D,N1,P}, alt={ityādipadārthasvabhāva}]{ityādipadārthasvabhāva}
+      \app{\lem[wit={D,N1,P}, alt={ity ādipadārthasvabhāva}]{ity-ādipadārthasvabhāva}
         \rdg[wit={U2}]{ityādipadārthā°}
         \rdg[wit={B}]{ityādipadārthāsvabhāvataḥ}
         \rdg[wit={N2}]{atyādipadārtharthasvabhāva}
@@ -1229,14 +1222,13 @@ Through Jñānayoga [the self] without the change of form is known.
   \ekddiv{type=trans}
     \begin{tlate}[p22_04]
       \noindent
-  1. Clothes made from silk;\footnote{Within the twenty \textit{upabhoga}s of the \textit{Mānasollāsa} there is the topic of \textit{Vastropabhoga} or the ``enjoyment of garments''. Particularly in summer, the king is asked to wear silk or cotton clothes which are thin and charming (\citeauthor[1939:14]{manasollasa}).} 2. A site of the palace in which there are mansions endowed with five or seven rooms.\footnote{The first \textit{adhyāya} of the third \textit{viṃśati} of the \textit{Mānasollāsa} discusses astrology for finding out auspicious moments while building new houses for princes. Here houses with one to four \textit{śālā}s are described (\citeauthor[1939:6-7]{manasollasa}).} 3. A huge and soft bed with an excellent blanket;\footnote{This is found as \textit{Śayyābhoga} within the \textit{Mānasollāsa}. In this section, seven kinds of beds and eight kinds of bed-steads are described (\citeauthor[1939:21]{manasollasa}).} 4. [on which] there is seated an excellent, youthful, charming and virtuous wife;\footnote{This is resembled as \textit{yosidupabhoga} within the \textit{Mānasollāsa}. In this chapter, King Someśvara describes the qualifications of women a king should marry. The two most important qualities he gives are beauty and full youth. Out of the four kinds of women: a) Padminī, b) Citriṇī, c) Śaṅkhinī, and d) Hastinī, he suggests that the latter two kinds are not worth enjoying  (\citeauthor[21]{manasollasa}.)} 5. An excellent seat;\footnote{The \textit{āsanopabhoga} or ``the enjoyment of seats'' within the \textit{Mānasollāsa} describe various kinds of royal seats (\citeauthor[1939:15]{manasollasa}).} 6. An exceptional valuable horse;\footnote{This is resembled as \textit{yānopabhoga} within the \textit{Mānasollāsa}. In this chapter, King Someśvara lists nine kinds of vehicles, including horses (\citeauthor[1939:24]{manasollasa}).} 7. Food that pleases the senses;\footnote{This is resembled as \textit{annabhoga} within the \textit{Mānasollāsa}. In this section, King Someśvara describes the names of various kinds of great food and the directions as to the preparations of various dishes (\citeauthor[1939:21]{manasollasa}).} 8. Various drinks.\begin{buber}[f22_1]\footnote{This is resembled as \textit{pānīyabhoga} within the \textit{Mānasollāsa}. In this chapter, everything related to drinking and drinks is described (\citeauthor[1939:23]{manasollasa}). Instead of following his source text closely, Rāmacandra modifies the passage's meaning. The original ascetic ideal of his source text, which emphasizes renunciation and detachment from wealth, is weakened by introducing the eight enjoyments. Instead of radically abandoning wealth, as we can \ldots}\end{buber} 
+  1. Clothes made from silk thread;\footnote{Within the twenty \textit{upabhoga}s of the \textit{Mānasollāsa} there is the topic of \textit{Vastropabhoga} or the ``enjoyment of garments''. Particularly in summer, the king is asked to wear silk or cotton clothes which are thin and charming (\citeauthor[1939:14]{manasollasa}).} 2. Mansions endowed with five or seven rooms.\footnote{The first \textit{adhyāya} of the third \textit{viṃśati} of the \textit{Mānasollāsa} discusses astrology for finding out auspicious moments while building new houses for princes. Here houses with one to four \textit{śālā}s are described (\citeauthor[1939:6-7]{manasollasa}).} 3. A very large bed with a soft and lovely blanket;\footnote{This is found as \textit{Śayyābhoga} within the \textit{Mānasollāsa}. In this section, seven kinds of beds and eight kinds of bed-steads are described (\citeauthor[1939:21]{manasollasa}).} 4. [on which] there is seated a wife belonging to the Padminī-class\footnote{Cf. \citetitle{ratirahasya}, Ed. p. 6.} of women - youthful, beautiful and virtuous;\footnote{This is resembled as \textit{yosidupabhoga} within the \textit{Mānasollāsa}. In this chapter, King Someśvara describes the qualifications of women a king should marry. The two most important qualities he gives are beauty and full youth. Out of the four kinds of women: a) Padminī, b) Citriṇī, c) Śaṅkhinī, and d) Hastinī, he suggests that the latter two kinds are not worth enjoying (\citeauthor[1935:21]{manasollasa}.)} 5. An excellent seat;\footnote{The \textit{āsanopabhoga} or ``the enjoyment of seats'' within the \textit{Mānasollāsa} describe various kinds of royal seats (\citeauthor[1939:15]{manasollasa}).} 6. An exceptional valuable horse;\footnote{This is resembled as \textit{yānopabhoga} within the \textit{Mānasollāsa}. In this chapter, King Someśvara lists nine kinds of vehicles, including horses (\citeauthor[1939:24]{manasollasa}).} 7. Appetising food;\footnote{This is resembled as \textit{annabhoga} within the \textit{Mānasollāsa}. In this section, King Someśvara describes the names of various kinds of great food and the directions as to the preparations of various dishes (\citeauthor[1939:21]{manasollasa}).} 8. Various drinks.\begin{buber}[f22_1]\footnote{This is resembled as \textit{pānīyabhoga} within the \textit{Mānasollāsa}. In this chapter, everything related to drinking and drinks is described (\citeauthor[1939:23]{manasollasa}). Instead of following his source text closely, Rāmacandra modifies the passage's meaning. The original ascetic ideal of his source text, which emphasizes renunciation and detachment from wealth, is weakened by introducing the eight enjoyments. Instead of radically abandoning wealth, as we can see in the formulations of the source,\ldots}\end{buber} 
   The eight enjoyments are described. They impart suffering and [make one] beg for their sustenance.\\
     \end{tlate}
     \begin{tlate}[p22_05]
-  Like the rays of the sun, the butter of milk, the burning of fire, the stupor of poison, the sesame oil from the sesame seed, 
+  \indent Like the rays of the sun, the butter of milk, the burning of fire, the stupor of poison, the sesame oil from the sesame seed, 
   the shade from the tree, the sweet odour from a fruit, the fire from a scabbard,
-   the sweet sap of Śārkara\footnote{A liquor prepared from Dhātakī with sugar. Beleg?} 
-   and so on, the cold of piles of snow, and so on is the inherent essence of things.
+   the sweet sap of Śārkara and so on, the cold of piles of snow, and so on is the inherent essence of things.
    In the same way, the circuit of mundane existance is within the highest God's own nature. 
    Moreover, the highest God is indivisible and all-filling.
   \label{endsvabhava}
@@ -1550,9 +1542,9 @@ karttavyaṃ/\linelabel{_155e}
 \xmlhead[h23]{[XXIII. Bāhyalakṣya]}
 \label{bahyatrans}
 \begin{tlate}[p23_01]
-  \begin{euber}[f22_1]\blfootnote{\hspace{-2.2em} see in the formulations of the source, the YSv (PT p. 837): ``Having gained discrimination of the self, one calms the restless mind. Having seen the darkness of ignorance caused by sense objects, one knows the supreme soul and becomes a soul beyond illusion, free from attachment to worldly pleasures, and goes through birth and death in truth, again and again. Abandoning aversion etc. [and] riches, which increase suffering like poison, one is liberated by Jñānayoga, which is as powerful as millions of suns.'', - Rāmacandra only states that they cause suffering and craving. This observation perfectly suits the initial definition of Rājayoga (cf. \uproman{1}. ll. 1-2, p.\pageref{intro}) in which it is defined as a practice that works even if the practitioner is leading an exuberant wealthy lifestyle.}\end{euber}
+  \begin{euber}[f22_1]\blfootnote{\hspace{-2.2em} the YSv (PT p. 837): `Having gained discrimination of the self, one calms the restless mind. Having seen the darkness of ignorance caused by sense objects, one knows the supreme soul and becomes a soul beyond illusion, free from attachment to worldly pleasures, and goes through birth and death in truth, again and again. Abandoning aversion etc. [and] riches, which increase suffering like poison, one is liberated by Jñānayoga, which is as powerful as millions of suns.', - Rāmacandra only states that they cause suffering and craving. This observation perfectly suits the initial definition of Rājayoga (cf. \uproman{1}. ll. 1-2, p.\pageref{intro}) in which it is defined as a practice that works even if the practitioner is leading an exuberant wealthy lifestyle.}\end{euber}
   \noindent
-  Now, the outer fixation is taught. Beginning at a four-finger wide distance from the tip of the nose, the space-element, appearing blue, being full of light, shall be made the target [of fixation]. Or, beginning at a six-finger wide distance from the tip of the nose, the wind element, appearing greyish, shall be made the target [of fixation]. Or, beginning at an eight-finger wide distance from the tip of the nose, the very red fire element shall be made the target [of fixation]. Or, beginning at a ten-finger wide distance from the tip of the nose, the white fickle water element shall be made the target [of fixation]. Or, beginning at a twelve-finger wide distance from the tip of the nose, the yellow-coloured earth element shall be made the target [of fixation]. Or, beginning at the tip of the nose\footnote{Given the explicit instructions of the respective distance of the exercise in the previous sentences, it is surprising that this instruction is lacking the mention of the distance.} the space-element full of fire shining like ten million suns shall be made the target [of fixation].\footnote{The first five outer targets, associated with the five elements can also be identified within \citetitle{sarvangayoga} 3.29-33 (Ed. pp. 104-105): (\textit{bāhya lakṣa aur puni jāṃnahūṃ | paṃca tatva kī lakṣa su ṭhānahuṃ} | \textit{agra nāsikā aṃgula cārī | nīla varṇa nabha deṣi bicārī} || 29 || \textit{nāsā agra aṃgul chah deṣaiṃ | dhūmrahi varṇ vāyu tat peśai} | \textit{aṃgul aṣṭa nāsikā āgai | rakta varṇ su vahni tat jāgai} || 30 || \textit{nāsā agra aṃgul daś tāṃī | śvet varṇ jal deṣi tahāṃī} | \textit{nāsā agra su aṃgul bārā | pīta varṇ bhū deṣi apārā} || 31 || \textit{bāhya lakṣa aur bahuterī | so jānaṃ jo pāvai serī} | \textit{sataguru kṛpā karai jau kabahī | dei batāi chinak maiṃ sabahī} || 32 ||) ``(29) Contemplate the external target repeatedly, focusing on the five elements. Four fingers above the tip of the nose; contemplate the blue-coloured space-element. (30) Six fingers from the tip of the nose visualize the smoke-coloured air element. Eight fingers in front of the nose visualize the red-coloured fire element. (31)  Ten fingers from the tip of the nose visualize the white-coloured water element. Twelve fingers in front of the nose visualize the earth element with a yellow colour. (32) Many external targets exist, but only a few can attain the ultimate goal. If the true guru shows mercy at any time, they reveal the secret within.''}
+  Now, the outer fixation is taught. Beginning at a four-finger wide distance from the tip of the nose, the space-element, appearing blue, being full of light, shall be made the target [of fixation]. Or, beginning at a six-finger wide distance from the tip of the nose, the wind element, appearing greyish, shall be made the target [of fixation]. Or, beginning at an eight-finger wide distance from the tip of the nose, the very red fire element shall be made the target [of fixation]. Or, beginning at a ten-finger wide distance from the tip of the nose, the white fickle water element shall be made the target [of fixation]. Or, beginning at a twelve-finger wide distance from the tip of the nose, the yellow-coloured earth element shall be made the target [of fixation]. Or, beginning at the tip of the nose\footnote{Given the explicit instructions of the respective distance of the exercise in the previous sentences, it is surprising that this instruction is lacking the mention of the distance.} the space-element full of fire shining like ten million suns shall be made the target [of fixation].\footnote{The first five outer targets, associated with the five elements can also be identified within \citetitle{sarvangayoga} 3.29-33 (Ed. pp. 104-105): (\textit{bāhya lakṣa aur puni jāṃnahūṃ} | \textit{paṃca tatva kī lakṣa su ṭhānahuṃ} | \textit{agra nāsikā aṃgula cārī} | \textit{nīla varṇa nabha deṣi bicārī} || 29 || \textit{nāsā agra aṃgul chah deṣaiṃ} | \textit{dhūmrahi varṇ vāyu tat peśai} | \textit{aṃgul aṣṭa nāsikā āgai} | \textit{rakta varṇ su vahni tat jāgai} || 30 || \textit{nāsā agra aṃgul daś tāṃī} | \textit{śvet varṇ jal deṣi tahāṃī} | \textit{nāsā agra su aṃgul bārā} | \textit{pīta varṇ bhū deṣi apārā} || 31 || \textit{bāhya lakṣa aur bahuterī} | \textit{so jānaṃ jo pāvai serī} | \textit{sataguru kṛpā karai jau kabahī} | \textit{dei batāi chinak maiṃ sabahī} || 32 ||) `(29) Contemplate the external target repeatedly, focusing on the five elements. Four fingers above the tip of the nose; contemplate the blue-coloured space-element. (30) Six fingers from the tip of the nose visualize the smoke-coloured air element. Eight fingers in front of the nose visualize the red-coloured fire element. (31)  Ten fingers from the tip of the nose visualize the white-coloured water element. Twelve fingers in front of the nose visualize the earth element with a yellow colour. (32) Many external targets exist, but only a few can attain the ultimate goal. If the true guru shows mercy at any time, they reveal the secret within.'}
   \flushpage 
     \end{tlate}
   \end{translation}
@@ -1848,7 +1840,7 @@ jihvāgreṇocca\app{\lem[wit={X}, alt={°rate}]{rate}
   \begin{translation}
     \begin{tlate}[p23_02]
 \noindent
-After having fixed the gaze on the space-element or above the space-element, due to the execution of meditation [on either target], he sees the sun without the group of thousand rays related to the sun. Or, the mass of light situated seventeen-finger wide distance above the head shall be made the fixation object. Or, at the uppermost part of the [previously mentioned] focal point, the earth element appearing in the colour of molten gold shall be made the target [of fixation]. From the execution of [the yoga of] targets onto any of the discussed targets, wrinkles, grey hair, etc., are removed. Diseases of the limbs are removed without medical herbs. All enemies become friends while sleeping. The lifespan increases up to 1000 years. The non-recited scripture is uttered by the tip of the tongue. Such [practice] yields numerous fruits.\footnote{A variant of the practice with little differences can also be found in \citetitle{advaya} 6 (Ed. p. 4): (\textit{atha bahirlakṣyalakṣaṇam | nāsikāgre caturbhiḥ ṣaḍbhir aṣṭabhiḥ daśabhiḥ dvādaśabhiḥ kramāt aṅgulānte nīladyutiśyāmatvasadṛgraktabhaṅgīsphuratpītavarṇadvayopetaṃ vyoma yadi paśyati sa tu yogī bhavati | caladṛṣṭyā vyomabhāgavīkṣituḥ puruṣasya dṛṣṭyagre jyotirmayūkhā vartante | taddarśanena yogī bhavati | taptakāñcanasaṃkāśajyotirmayūkhā apāṅgānte bhūmau vā paśyati taddṛṣṭiḥ sthirā bhavati | śīrṣopari dvādaśāṅgulasamīkṣituḥ amṛtatvaṃ bhavati | yatra kutra sthitasya śirasi vyomajyotir dṛṣṭaṃ cet sa tu yogī bhavati} || 6 ||) ``Now, the characteristics of the external fixation. If one sees a space endowed with two colours, a twinkling yellow breaking into a red which resembles the blackness of profound azure radiance, at [a distance of] four, six, eight, ten and twelve finger breadths, in that order, from the tip of a nose, he becomes a yogin. With the fluctuating gaze of one who looks at the portions of space, luminous rays manifest in front of the observer's visions. By seeing that, one becomes a yogin. [Once] he sees luminous rays appearing like molten gold at the corner of his eye or on the ground, his gaze becomes stable. For one who sees [this phenomenon] twelve finger breadths above the head, the state of immortality ensues. If the light of space is seen in the head by one who is situated anywhere, he is a yogin.''}\footnote{Also Cf. \citetitle{shivayogapradipika} 4.41cd-47ab for a description of Bāhyalakṣya closely resembling the one in \citetitle{advaya}.}\footnote{The \citetitle{hathasamketacandrikamysore} (manuscripts checked: ORI B220, GOML R3239, HSC 2244) most likely quotes the Bāhyalakṣya passage from the \textit{Yogatattvabindu} without reference. Yet, it appears that the Sundaradeva's text is one the one hand corrupted and that he selected only same of the various techniques presented here, cf. \textbf{sources} on pp. \pageref{bahya}-\pageref{continuebahya}.}
+After having fixed the gaze on the space-element or above the space-element, due to the execution of meditation [on either target], he sees the sun without the group of thousand rays related to the sun. Or, the mass of light situated seventeen-finger wide distance above the head shall be made the fixation object. Or, at the uppermost part of the [previously mentioned] focal point, the earth element appearing in the colour of molten gold shall be made the target [of fixation]. From the execution of [the yoga of] targets onto any of the discussed targets, wrinkles, grey hair, etc., are removed. Diseases of the limbs are removed without medical herbs. All enemies become friends while sleeping. The lifespan increases up to 1000 years. The non-recited scripture is uttered by the tip of the tongue. Such [practice] yields numerous fruits.\footnote{A variant of the practice with little differences can also be found in \citetitle{advaya} 6 (Ed. p. 4): (\textit{atha bahirlakṣyalakṣaṇam} | \textit{nāsikāgre caturbhiḥ ṣaḍbhir aṣṭabhiḥ daśabhiḥ dvādaśabhiḥ kramāt aṅgulānte nīladyutiśyāmatvasadṛgraktabhaṅgīsphuratpītavarṇadvayopetaṃ vyoma yadi paśyati sa tu yogī bhavati} | \textit{caladṛṣṭyā vyomabhāgavīkṣituḥ puruṣasya dṛṣṭyagre jyotirmayūkhā vartante} | \textit{taddarśanena yogī bhavati} | \textit{taptakāñcanasaṃkāśajyotir mayūkhā apāṅgānte bhūmau vā paśyati taddṛṣṭiḥ sthirā bhavati} | \textit{śīrṣopari dvādaśāṅgulasamīkṣituḥ amṛtatvaṃ bhavati} | \textit{yatra kutra sthitasya śirasi vyomajyotir dṛṣṭaṃ cet sa tu yogī bhavati} || 6 ||) `Now, the characteristics of the external fixation. If one sees a space endowed with two colours, a twinkling yellow breaking into a red which resembles the blackness of profound azure radiance, at [a distance of] four, six, eight, ten and twelve finger breadths, in that order, from the tip of a nose, he becomes a yogin. With the fluctuating gaze of one who looks at the portions of space, luminous rays manifest in front of the observer's visions. By seeing that, one becomes a yogin. [Once] he sees luminous rays appearing like molten gold at the corner of his eye or on the ground, his gaze becomes stable. For one who sees [this phenomenon] twelve finger breadths above the head, the state of immortality ensues. If the light of space is seen in the head by one who is situated anywhere, he is a yogin.'}\footnote{Also Cf. \citetitle{shivayogapradipika} 4.41cd-47ab for a description of Bāhyalakṣya closely resembling the one in \citetitle{advaya}.}\footnote{The \citetitle{hathasamketacandrikamysore} (manuscripts checked: ORI B220, GOML R3239, HSC 2244) most likely quotes the Bāhyalakṣya passage from the \textit{Yogatattvabindu} without reference. Yet, it appears that the Sundaradeva's text is one the one hand corrupted and that he selected only same of the various techniques presented here, cf. \textbf{sources} on pp. \pageref{bahya}-\pageref{continuebahya}.}
 \end{tlate}
   \end{translation}
 \end{alignment}
